2009-02-22  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/dictionary.hpp:
		Rename find_prefixes() to prefix() of both class WordIndexer and class Dictionary.
		Add 3 overload prefix() for WordIndexer.
		Add 1 overload add() for WordIndexer.
		Add 1 overload get() for WordIndexer.
		Add 1 overload prefix() for Dictionary.
		Change prefix() return result type from std::list<T> to std::vector<T>.
		Add 1 overload get_word().
		Fix a bug in WordIndexer::add().
		Fix a bug in WordIndexer::remove().
	* cpp/include/openclas/segment.hpp: Modified corresponding to the rename from find_prefixex() to prefix().
	* cpp/src/unit_test/OpenClas_VS2008.vcproj: minor changes on optimization of Release version.
	* cpp/src/unit_test/unit_test_dictionary.hpp: Implemented Dictionary and related class testcases.

2009-02-19  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/common.hpp: Remove unordered_map
	* cpp/include/openclas/dictionary.hpp: Replace unordered_map with std::map
	* cpp/include/openclas/serialization.hpp: Fix bug about global variable locale_{gbk,utf8}
	* cpp/include/openclas/utility.hpp: Remove a test code.
	* cpp/src/unit_test/unit_test.cpp: remove all uncomments.
	* cpp/src/unit_test/unit_test_dictionary.hpp:
	* cpp/src/unit_test/unit_test_serialization.hpp: Add empty testcases.

2009-02-18  Tao Wang  <dancefire@gmail.com>

	* include/openclas/common.hpp: Add define NOMINMAX for MSVC
	* include/openclas/k_shortest_path.hpp:
		Add undef min. 
		Remove const of Graph arguments.
		Add empty graph process.
	* src/unit_test/unit_test_k_shortest_path.hpp: Complete the testcases for k_shortest_path.hpp.

2009-02-17  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/k_shortest_path.hpp:
		change path_type::nodelist to std::vector.
		change dag_all_paths() arguments.
		add code to handle empty graph.
		fix a bug, didn't add up the edge during the traverse.
		using property_map<>::const_type.